force-app/main/default/objects/Trigger_Setting__mdt/fields/AfterDelete__c.field-meta.xml
<CustomField>
  <fullName>AfterDelete__c</fullName>
  <defaultValue>true</defaultValue>
  <inlineHelpText
  >Used to enable/disable the &apos;After Delete&apos; trigger event.</inlineHelpText>
  <label>After Delete</label>
  <type>Checkbox</type>
</CustomField>