force-app/main/default/objects/Trigger_Setting__mdt/fields/AfterInsert__c.field-meta.xml
<CustomField>
    <fullName>AfterInsert__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Used to enable/disable the &apos;After Insert&apos; trigger event.</inlineHelpText>
    <label>After Insert</label>
    <type>Checkbox</type>
</CustomField>