force-app/main/default/objects/Trigger_Setting__mdt/fields/AfterUndelete__c.field-meta.xml
<CustomField>
  <fullName>AfterUndelete__c</fullName>
  <defaultValue>true</defaultValue>
  <inlineHelpText
  >Used to enable/disable the &apos;After Undelete&apos; trigger event.</inlineHelpText>
  <label>After Undelete</label>
  <type>Checkbox</type>
</CustomField>