force-app/main/default/objects/Trigger_Setting__mdt/fields/AfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>AfterUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Used to enable/disable the &apos;After Update&apos; trigger event.</inlineHelpText>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>