force-app/main/default/objects/Trigger_Setting__mdt/fields/BeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>BeforeDelete__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Used to enable/disable the &apos;Before Delete&apos; trigger event.</inlineHelpText>
    <label>Before Delete</label>
    <type>Checkbox</type>
</CustomField>