force-app/main/default/objects/Trigger_Setting__mdt/fields/BeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>BeforeInsert__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Used to enable/disable the &apos;Before Insert&apos; trigger event.</inlineHelpText>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>