force-app/main/default/objects/Trigger_Setting__mdt/fields/BeforeUpdate__c.field-meta.xml
<CustomField>
    <fullName>BeforeUpdate__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Used to enable/disable the &apos;Before Update&apos; trigger event.</inlineHelpText>
    <label>Before Update</label>
    <type>Checkbox</type>
</CustomField>