force-app/main/default/objects/Trigger_Setting__mdt/fields/IsDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to completely disable the trigger.</inlineHelpText>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>